@@ -1,3 +1,7 @@
+2012-12-31  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftdiff.c (render_state_draw, main): Use HEADER_HEIGHT.
+
 2012-12-27  Werner Lemberg  <wl@gnu.org>
 
 	Increase header line distances.
